memperbaiki perhitungan ssa

--- a/templates/result.html
+++ b/templates/result.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SSA Result</title>
-  </head>
-  <body>
-    <h1>SSA Analysis Result</h1>
+{% extends 'base.html' %} {% block title %}Perhitungan Singular Spectrum
+Analysis{% endblock %} {% block content %}
+<div class="p-4">
+  <h1 class="font-semibold text-2xl text-center">
+    Hasil Perhitungan Penjualan Kwh Listrik dengan Menggunakan Singular Spectrum
+    Analysis
+  </h1>
+  <div class="w-full p-8">
     <img src="{{ plot_url }}" alt="SSA Plot" />
-    <a href="/">Upload another file</a>
-  </body>
-</html>
+  </div>
+  <div class="flex justify-center">
+    <a
+      href="/perhitungan"
+      class="bg-indigo-500 hover:bg-indigo-600 p-4 text-white rounded-lg"
+      >Kembali</a
+    >
+  </div>
+</div>
+{% endblock %}
